Progressive enhancment of commits, so to say
